--- a/Sources/Future.tex
+++ b/Sources/Future.tex
@@ -564,7 +564,7 @@ complex compound types to improve readability, e.g., in
 \lstinputlisting[linerange=10-17]{./examples/overview2.sl}% APPLY:linerange=OVERVIEW_EDITOR_TYPES
 Such definitions are purely cosmetic: the name \lstinline{Editor} is just an
 abbreviation for the record on the right-hand side, and the two are
-interchangeable in every context. By contract, in OO languages such as Java,
+interchangeable in every context. By contrast, in OO languages such as Java,
 every compound type (class declaration or interface definition) has a name, and
 subtyping is explicitly declared between type \textit{names}.
 
