--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -76,7 +76,7 @@ requirements.
 Various programming language features support modular programming, with varying
 degrees of limitations. Functional languages, notably ML and OCaml, use module
 systems~\citep{MacQueen_1984} for flexible program construction. In particular,
-``functor''---which are functions over modules---allows
+ML ``functors''---which are functions over modules---allow
 one to develop and compile a module independently from the modules on which it
 depends. One functor can then be instantiated with multiple different modules
 during the execution of the program, enabling a powerful form of code reuse. One
@@ -97,8 +97,8 @@ programs.
 % approach usually requires quite advanced type system features, e.g., type classes, type
 % families, or even dependent types!
 
-Object-oriented languages, on the other hand, use classes and inheritance
-mechanism to support code extensibility and reuse. Single inheritance found in
+Object-oriented languages, on the other hand, use classes and inheritance as primary
+mechanisms to support code extensibility and reuse. Single inheritance found in
 mainstream object-oriented languages (such as Java and C++) is perhaps the most
 well-known and well-studied mechanism. However, programmers have long realized
 that single inheritance is not flexible enough when it comes to structuring a
@@ -139,8 +139,9 @@ typing dynamic inheritance and first-class mixins, and proposes the restriction
 to static inheritance that is also common in statically-typed languages. One of
 the motivations in this thesis is to present a type discipline that can encode
 first-class classes. Moreover, we push this one-step further: for the first
-rime, this thesis shows how to encode \textit{first-class mixins/traits}. But
-first thing first, let us briefly explain what are mixins and traits.
+time, this thesis shows how to encode \textit{first-class traits} in a
+statically typed setting. But first thing first, let us briefly explain what are
+traits, and the related concept ``mixins''.
 
 % Racket~\citep{DBLP:conf/aplas/FlattFF06} supports typed first-class classes, as
 % well as a \emph{dynamically-typed model} of first-class traits. However, unlike
@@ -202,7 +203,7 @@ accidental conflicts caused by programmers is extremely high.
 
 
 
-\subsection{Family Polymorphism}
+\subsection{Family Polymorphism and Nested Composition}
 
 The last mechanism---also the most powerful and complex one---is \emph{family
   polymorphism}. In family polymorphism~\citep{Ernst_2001}, inheritance is
@@ -230,8 +231,8 @@ programming features such as dynamic proxies, reflection or other
 meta-programming techniques. It is known that designing a sound type system that
 fully supports family polymorphism and nested composition is notoriously hard;
 there are only a few, quite sophisticated, research languages that manage
-this~\citep{ErnstVirtual, Nystrom_2004,
-  pubsdoc:tribe-virtual-calculus,SAITO_2007}. But these mechanisms usually focus
+this~\citep{ErnstVirtual, Nystrom_2004, pubsdoc:tribe-virtual-calculus,SAITO_2007}.
+But these mechanisms usually focus
 on getting a relatively complex Java-like language with family polymorphism. One
 of the motivations in this thesis is to come up with a minimal calculus that
 supports nested composition.
@@ -262,7 +263,7 @@ details are to be delivered in later chapters.
 
 \subsection{Disjoint Intersection Types}
 
-A central theme of this thesis is \textit{intersection types} (usually written
+A central theme of this thesis are \textit{intersection types} (usually written
 $\inter{A}{B}$). Intersection types~\citep{pottinger1980type, coppoInter} have a
 long history in programming languages. They were originally introduced to
 characterize exactly all strongly normalizing lambda terms. Since then, starting
@@ -301,11 +302,11 @@ language. This operator was introduced by \citeauthor{reynolds1988preliminary}
 in Forsythe~\citep{reynolds1988preliminary} and adopted by a few other
 calculi~\citep{Castagna_1992, dunfield2014elaborating, oliveira2016disjoint,
   alpuimdisjoint}. Unfortunately, while the merge operator is powerful, it also
-makes it hard to get a \emph{coherent} (or unambiguous) semantics.
-%A semantics is said to be coherent if all valid programs have the
-%same meaning.\tom{The previous sentence is easily misunderstood.}
-Unrestricted uses of the merge operator can be ambiguous, leading to an incoherent semantics
-where the same program can evaluate to different values.
+makes it hard to get a \emph{coherent}~\citep{Reynolds_1991} (or unambiguous)
+semantics. As a first approximation, a semantics is said to be coherent if a
+valid program has exactly \textit{one} meaning (i.e., one value when run).
+Unrestricted uses of the merge operator can be ambiguous, leading to an
+incoherent semantics where the same program can evaluate to different values.
 %Perhaps because of this
 %issue the merge operator has not been adopted by many language designs.
 We shall come back to this form of intersection types in more details in
@@ -365,11 +366,14 @@ solution to coherence, the solution imposes several ad-hoc restrictions to
 guarantee the uniqueness of the elaboration and thus allow for a simple
 syntactic proof of coherence. However such restrictions makes it hard or
 impossible to adapt the proof to extensions of the calculus with distributivity
-rules. To deal with coherence, we employ a more semantic proof method called the
-\textit{canonicity} relation inspired by \emph{logical relations}~\citep{tait,
-  plotkin1973lambda, statman1985logical}. The second difficulty is that BCD
-subtyping is non-algorithmic. We adapted Pierce's decision procedure and propose
-an equivalent algorithmic version.
+rules. To deal with coherence, we employ a more semantic proof based on
+\emph{logical relations}~\citep{tait, plotkin1973lambda, statman1985logical}
+that we call the \textit{canonicity} relation. The second difficulty is that
+BCD subtyping is non-algorithmic: the presence of a transitivity axiom in the
+rules makes it hard to get an algorithmic version. To address it, we adapt
+Pierce's decision procedure~\citep{pierce1989decision} (closely related to BCD)
+with subtyping of records and coercions, and propose an equivalent algorithmic
+subtyping relation.
 
 \paragraph{The \fnamee Calculus.}
 
@@ -424,17 +428,17 @@ In summary the contributions of this thesis are:
 
 \item We present \fnamee, a polymorphic calculus with disjoint intersection
   types. \fnamee is incorporated with a BCD-like subtyping relation extended
-  with disjoint polymorphism. \fnamee is both type-safe and coherent and
+  with disjoint polymorphism. \fnamee is both type-safe and coherent, and
   supports nested composition.
 
-\item We present \sedel, a statically-typed language design that supports
-  first-class traits, dynamic inheritance, as well as standard object-oriented
-  features such as dynamic dispatching and abstract methods. We show how the
-  semantics of \sedel can be defined by elaboration into \fnamee.
+\item We present \sedel, an object-oriented language design that supports
+  \textit{typed first-class traits}, dynamic inheritance, as well as standard
+  object-oriented features such as dynamic dispatching and abstract methods. We
+  show how the semantics of \sedel can be defined by elaboration into \fnamee.
 
 \item A more flexible notion of disjoint intersection types where only merges
   need to be checked for disjointness. This removes the need for enforcing
-  disjointness for all well-formed types, making type systems with disjoint
+  disjointness for all well-formed types, making calculi with disjoint
   intersections more easily extensible.
 
 \item The canonicity relation: a powerful proof method for establishing
