--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -3,7 +3,7 @@ First and foremost, I would like to thank my PhD supervisor Dr. Bruno C. d. S.
 Oliveira for his continued support and mentorship throughout my studies. I would
 also like to thank my co-supervisor Prof. T.H. Tse for his valuable suggestions
 and guidelines. He helped revise my papers and this thesis, continuously nudging
-me to make my writing more clearer. His feedback is nothing short of inspiring,
+me to make my writing clearer. His feedback is nothing short of inspiring,
 which I greatly enjoyed. Secondly, I would like to express my gratitude to Prof.
 Tom Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic
 of mutual interest, which lead to one of the key publications for this PhD
