--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -445,7 +445,11 @@ In summary the contributions of this thesis are:
   coherence of calculi with disjoint intersection types and BCD-like subtyping.
 
 \item A comprehensive Coq mechanization of all metatheory, including type
-  safety, coherence, algorithmic soundness and completeness, etc. This has
+  safety, coherence, algorithmic soundness and completeness, etc.\footnote{For
+    convenience, whenever possible, definitions, lemmas and theorems have hyperlinks (click
+    \href{https://github.com/bixuanzju/phd-thesis-artifact}{\leftpointright}) to their Coq counterparts. Also since \fnamee completely
+    subsumes \namee, to save work, for \namee metatheory we provide cross
+    references to the corresponding \fnamee Coq definitions, instead.} This has
   notably revealed several missing lemmas and oversights in Pierce's manual
   proof of BCD's algorithmic subtyping~\citep{pierce1989decision}. As a
   by-product, we obtain the first mechanically verified BCD-style subtyping
