--- a/packages.tex
+++ b/packages.tex
@@ -26,6 +26,10 @@
 
 \usepackage{pifont}
 
+\usepackage{savesym}
+\savesymbol{checkmark}
+\usepackage{dingbat}
+
 \usepackage{ottalt}
 
 \usepackage{comment}
